force-app/main/default/objects/Recipient_Group__mdt/Recipient_Group__mdt.object-meta.xml
<CustomObject>
    <label>Recipient Group</label>
    <pluralLabel>Recipient Groups</pluralLabel>
</CustomObject>