force-app/main/default/objects/Recipient_Group__mdt/fields/IncludeInactive__c.field-meta.xml
<CustomField>
    <fullName>IncludeInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Inactive</label>
    <type>Checkbox</type>
</CustomField>