force-app/main/default/objects/Recipient_Group__mdt/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <length>40</length>
    <type>Text</type>
</CustomField>