force-app/main/default/objects/Recipient_Group__mdt/listViews/All_Rec.listView-meta.xml
<ListView>
    <fullName>All_Rec</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Definition__c</columns>
    <columns>Kind__c</columns>
    <columns>IsProtected</columns>
    <columns>IncludeInactive__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rec</label>
    <language>en_US</language>
</ListView>