force-app/main/default/objects/Recipient_Group__mdt/listViews/MyView222.listView-meta.xml
<ListView>
    <fullName>MyView222</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Definition__c</columns>
    <columns>IncludeInactive__c</columns>
    <columns>Kind__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>MyView222</label>
    <language>en_US</language>
</ListView>